tdf#76322 writer: allow column breaks in headers/footers

The code blocking this came in the original OpenOffice flowfrm.
Either IsInSct() or FindFooterOrHeader() works to resolve
this bug.  I chose FindFooterOrHeader because it seemed
to match the existing targets (docbody, flyframe) better.

Reviewed-on: https://gerrit.libreoffice.org/26208
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit 121109610f9af0b294cf042c6ae5abc6fcc4f326)

Change-Id: I51fc3bdc51c76e290b47ec7b9044780e5b67136c